--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
 
         <!--DB-->
         <postgresql.version>42.2.18</postgresql.version>
+        <slf4j.version>1.7.30</slf4j.version>
+        <logback.version>1.2.3</logback.version>
 
         <!--    Tests  -->
         <assertj.version>3.19.0</assertj.version>
