--- a/src/main/resources/db/db.properties
+++ b/src/main/resources/db/db.properties
@@ -8,3 +8,4 @@ jpa.showSql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=false
 database.driverClassName=org.postgresql.Driver
+dataSource.class=org.springframework.jdbc.datasource.DriverManagerDataSource
