--- a/src/main/resources/db/db.properties
+++ b/src/main/resources/db/db.properties
@@ -2,10 +2,16 @@ database.url=jdbc:postgresql://localhost:5432/ignitis
 database.username=user
 database.password=password
 
-database.init=true
+database.driverClassName=org.postgresql.Driver
+dataSource.class=org.springframework.jdbc.datasource.DriverManagerDataSource
+
+database.init=false
 jdbc.initLocation=classpath:db/initDB.sql
+
+liquibase.shouldRun=true
+
 jpa.showSql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=false
-database.driverClassName=org.postgresql.Driver
-dataSource.class=org.springframework.jdbc.datasource.DriverManagerDataSource
+hibernate.hbm2ddl.auto=none
+
