--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <postgresql.version>42.2.18</postgresql.version>
         <slf4j.version>1.7.30</slf4j.version>
         <logback.version>1.2.3</logback.version>
+        <liquibase.version>4.6.2</liquibase.version>
 
         <!--    Tests  -->
         <assertj.version>3.19.0</assertj.version>
@@ -103,6 +104,11 @@
             <artifactId>tomcat-jdbc</artifactId>
             <version>${tomcat.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${liquibase.version}</version>
+        </dependency>
 
         <!--Security-->
         <dependency>
@@ -147,7 +153,6 @@
             <version>${javax-el.version}</version>
             <scope>provided</scope>
         </dependency>
-
 
         <!--JSON-->
         <dependency>
