Add changeSet for db test data

--- a/src/main/resources/db/db.properties
+++ b/src/main/resources/db/db.properties
@@ -5,9 +5,11 @@ database.password=password
 database.driverClassName=org.postgresql.Driver
 dataSource.class=org.springframework.jdbc.datasource.DriverManagerDataSource
 
+#false if using liquibase otherwise false
 database.init=false
 jdbc.initLocation=classpath:db/initDB.sql
 
+#true if using liquibase otherwise false
 liquibase.shouldRun=true
 
 jpa.showSql=true
